syntax = "proto3";
package rbk.protocol;
message Message_Battery {
	double percetage = 1;
	double charge_current = 2;
	double charge_voltage = 3;
	bool is_charging = 4;
	double temperature = 5;
	int32 cycle = 6;
	double max_charge_current = 7;
	double max_charge_voltage = 8;
	string extra = 9;
	bool is_manually_connected = 10;
	bytes user_data = 30;
}
